# customerSupportRag

./: .env.example  .gitignore  README.md  pyproject.toml
data/raw/: banking_support_kb.json
docs/: design.md  evaluation.md  fallback_rag_test_results.md  hybrid_rag_test_results.md  simple_rag_test_results.md  submission_writeup.md
src/customer_support_bot/: __init__.py  cli.py  config.py  connection_checks.py  documents.py  indexing.py  rag.py  ui.py
tests/: test_config.py  test_connection_checks.py  test_documents.py  test_indexing.py  test_rag.py
