[project]
name = "customer-support-bot"
version = "0.1.0"
description = "Customer support bot project scaffold."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
support-bot = "customer_support_bot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

